WIP: patch for local use

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node build/index.js",
-    "play": "ts-node src/playground.ts",
+    "play": "tsc && node build/playground.js",
     "inspector": "npx @modelcontextprotocol/inspector node build/index.js"
   },
   "keywords": [],
@@ -18,10 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.16.0",
+    "@prisma/client": "^6.12.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "prisma": "^6.12.0",
     "typescript": "^5.8.3"
   }
 }
