--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@prisma/client": "^6.12.0",
+    "express": "^5.1.0",
+    "googleapis": "^105.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "prisma": "^6.12.0",
     "typescript": "^5.8.3"
