--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@google-cloud/local-auth": "^2.1.0",
     "@modelcontextprotocol/sdk": "^1.16.0",
     "@prisma/client": "^6.12.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express": "^5.1.0",
+    "fuse.js": "^7.1.0",
     "googleapis": "^105.0.0",
     "zod": "^3.25.76"
   },
